      query(SubClass.foo, SubcClass.bar).join(<anything>).
      In most cases, an error "Could not find a FROM clause to join 
      from" would be raised. In a few others, the result would be 
      returned in terms of the base class rather than the subclass - 
      so applications which relied on this erroneous result need to be 
      adjusted. [ticket:1431]

    - The "foreign_keys" argument of relation() will now propagate
      automatically to the backref in the same way that
      primaryjoin and secondaryjoin do.   For the extremely 
      rare use case where the backref of a relation() has 
      intentionally different "foreign_keys" configured, both sides
      now need to be configured explicity (if they do in fact require
      this setting, see the next note...).  
      
    - ...the only known (and really, really rare) use case where a 
      different foreign_keys setting was used on the forwards/backwards 
      side, a composite foreign key that partially points to its own 
      columns, has been enhanced such that the fk->itself aspect of the 
      relation won't be used to determine relation direction.
     
    
- sql
    - Removed an obscure feature of execute() (including connection,
      engine, Session) whereby a bindparam() construct can be sent as 
      a key to the params dictionary.  This usage is undocumented
      and is at the core of an issue whereby the bindparam() object
      created implicitly by a text() construct may have the same 
      hash value as a string placed in the params dictionary and
      may result in an inappropriate match when computing the final
      bind parameters.   Internal checks for this condition would
      add significant latency to the critical task of parameter 
      rendering, so the behavior is removed.  This is a backwards
      incompatible change for any application that may have been
      using this feature, however the feature has never been
      documented.
    
0.5.4p2
=======
